--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -11,9 +11,11 @@ browse-all=Explorar todo
 change-image=Cambiar imagen (Automatic Translation)
 changes-saved-at-x=Cambios guardados a las {0}.
 changes-to-experiences-are-applied-immediately=Los cambios realizados en las experiencias se aplican de inmediato.
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Contenedor
 content-name=Nombre del contenido (Automatic Translation)
-content-page-editor-comments-configuration-name=Comentarios del editor de páginas de contenido
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Estructura de contenido (Automatic Translation)
 content-type=Tipo de contenido
 delete-experience=Eliminar experiencia
