--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -11,9 +11,11 @@ browse-all=Tout parcourir
 change-image=Changer l'image (Automatic Translation)
 changes-saved-at-x=Modifications enregistrées dans {0}.
 changes-to-experiences-are-applied-immediately=Les modifications apportées aux expériences sont appliquées immédiatement.
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Conteneur
 content-name=Nom du contenu (Automatic Translation)
-content-page-editor-comments-configuration-name=Commentaires de l'éditeur de page de contenu
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Structure du contenu (Automatic Translation)
 content-type=Type de contenu
 delete-experience=Supprimer l'expérience
