--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -11,9 +11,11 @@ browse-all=Összes böngészése
 change-image=Képváltás (Automatic Translation)
 changes-saved-at-x=A változtatások elmentve: {0}.
 changes-to-experiences-are-applied-immediately=Az élmény változásai azonnal érvényesülnek.
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Konténer
 content-name=Tartalomnév (Automatic Translation)
-content-page-editor-comments-configuration-name=Tartalom oldal szerkesztő hozzászólásai
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Tartalom-struktúra (Automatic Translation)
 content-type=Tartalom típusa
 delete-experience=Élmény törlése
