--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -11,9 +11,11 @@ browse-all=Sfoglia tutto (Automatic Translation)
 change-image=Cambia immagine (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Le modifiche alle esperienze vengono applicate immediatamente. (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Contenitore (Automatic Translation)
 content-name=Nome contenuto (Automatic Translation)
-content-page-editor-comments-configuration-name=Commenti dell'editor di pagine di contenuto (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Struttura del contenuto (Automatic Translation)
 content-type=Tipo di contenuto (Automatic Translation)
 delete-experience=Cancella esperienza (Automatic Translation)
