--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sv.properties
@@ -11,9 +11,11 @@ browse-all=Bläddra bland alla
 change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Ändringar sparades kl. {0}.
 changes-to-experiences-are-applied-immediately=Ändringar i upplevelser tillämpas direkt.
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Behållare
 content-name=Content Name (Automatic Copy)
-content-page-editor-comments-configuration-name=Kommentarer för redigerare för sidinnehåll
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Content Structure (Automatic Copy)
 content-type=Innehållstyp
 delete-experience=Ta bort upplevelse
