--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
@@ -11,9 +11,11 @@ browse-all=அனைத்தையும் உலாவு
 change-image=Change Image (Automatic Copy)
 changes-saved-at-x=மாற்றங்கள் {0} இல் சேமிக்கப்பட்டன.
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately. (Automatic Copy)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=கன்டெய்னர்
 content-name=Content Name (Automatic Copy)
-content-page-editor-comments-configuration-name=Content Page Editor Comments (Automatic Copy)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Content Structure (Automatic Copy)
 content-type=உள்ளடக்க வகை
 delete-experience=எக்ஸ்பீரியன்ஸ்ஸை நீக்கவும்
