--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
@@ -11,9 +11,11 @@ browse-all=เรียกดูทั้งหมด (Automatic Translation)
 change-image=เปลี่ยนรูปภาพ (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=การเปลี่ยนแปลงประสบการณ์จะถูกนำไปใช้ในทันที (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=คอนเทนเนอร์ (Automatic Translation)
 content-name=ชื่อเนื้อหา (Automatic Translation)
-content-page-editor-comments-configuration-name=ความคิดเห็นเกี่ยวกับตัวแก้ไขหน้าเนื้อหา (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=โครงสร้างเนื้อหา (Automatic Translation)
 content-type=ชนิดเนื้อหา (Automatic Translation)
 delete-experience=ลบประสบการณ์ (Automatic Translation)
