--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -11,9 +11,11 @@ browse-all=Переглянути всі (Automatic Translation)
 change-image=Змінити зображення (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Зміни, внесені до досвіду, застосовуються негайно. (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Контейнер (Automatic Translation)
 content-name=Ім'я вмісту (Automatic Translation)
-content-page-editor-comments-configuration-name=Зміст сторінці редактора коментарів (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Структура вмісту (Automatic Translation)
 content-type=Тип вмісту (Automatic Translation)
 delete-experience=Видалити досвід (Automatic Translation)
