--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -11,9 +11,11 @@ browse-all=Duyệt tất cả (Automatic Translation)
 change-image=Thay đổi hình ảnh (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Thay đổi kinh nghiệm được áp dụng ngay lập tức. (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Container (Automatic Translation)
 content-name=Tên nội dung (Automatic Translation)
-content-page-editor-comments-configuration-name=Nội dung trang Editor Comment (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Cấu trúc nội dung (Automatic Translation)
 content-type=Loại nội dung (Automatic Translation)
 delete-experience=Xóa trải nghiệm (Automatic Translation)
