--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -11,9 +11,11 @@ browse-all=浏览全部
 change-image=更改图像 (Automatic Translation)
 changes-saved-at-x=更改已保存在 {0}。
 changes-to-experiences-are-applied-immediately=将立即应用对体验的变更。
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=容器
 content-name=内容名称 (Automatic Translation)
-content-page-editor-comments-configuration-name=内容页编辑器备注
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=内容结构 (Automatic Translation)
 content-type=内容类型
 delete-experience=删除体验
