--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -11,9 +11,11 @@ browse-all=דפדף הכל (Automatic Translation)
 change-image=שינוי תמונה (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=שינויים בחוויות מוחלים באופן מיידי. (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=מיכל (Automatic Translation)
 content-name=שם תוכן (Automatic Translation)
-content-page-editor-comments-configuration-name=הערות של עורך דפי תוכן (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=מבנה התוכן (Automatic Translation)
 content-type=סוג תוכן (Automatic Translation)
 delete-experience=מחיקת ניסיון (Automatic Translation)
