--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl_BE.properties
@@ -11,9 +11,11 @@ browse-all=Browse All (Automatic Copy)
 change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately. (Automatic Copy)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Container (Automatic Copy)
 content-name=Content Name (Automatic Copy)
-content-page-editor-comments-configuration-name=Content Page Editor Comments (Automatic Copy)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Content Structure (Automatic Copy)
 content-type=Content Type (Automatic Copy)
 delete-experience=Delete Experience (Automatic Copy)
