--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -11,9 +11,11 @@ browse-all=Przeglądaj wszystkie (Automatic Translation)
 change-image=Zmień obraz (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Zmiany w doświadczeniach są stosowane natychmiast. (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Kontener (Automatic Translation)
 content-name=Nazwa zawartości (Automatic Translation)
-content-page-editor-comments-configuration-name=Komentarze edytora strony zawartości (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=Struktura Content (Automatic Translation)
 content-type=Typ zawartości (Automatic Translation)
 delete-experience=Usuń doświadczenie (Automatic Translation)
