--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -11,9 +11,11 @@ browse-all=Tümüne göz at (Automatic Translation)
 change-image=Görüntüyü Değiştir (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Deneyimlere yapılan değişiklikler hemen uygulanır. (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Konteyner (Automatic Translation)
 content-name=İçerik adı (Automatic Translation)
-content-page-editor-comments-configuration-name=İçerik sayfası düzenleyici açıklamaları (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=İçerik yapısı (Automatic Translation)
 content-type=İçerik türü (Automatic Translation)
 delete-experience=Deneyimi Sil (Automatic Translation)
