--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
@@ -11,9 +11,11 @@ browse-all=流覽全部 (Automatic Translation)
 change-image=更改圖像 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=對體驗的更改將立即應用。 (Automatic Translation)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=容器 (Automatic Translation)
 content-name=內容名稱 (Automatic Translation)
-content-page-editor-comments-configuration-name=內容頁編輯器注釋 (Automatic Translation)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-structure=內容結構 (Automatic Translation)
 content-type=內容類型 (Automatic Translation)
 delete-experience=刪除體驗 (Automatic Translation)
