--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -11,11 +11,11 @@ browse-all=استعراض الكل
 change-image=تغيير الصورة (Automatic Translation)
 changes-saved-at-x=يتم حفظ التغييرات في {0}.
 changes-to-experiences-are-applied-immediately=يتم تطبيق التغييرات على التجارب فوريًا.
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=تمكين التعليقات (Automatic Translation)
+comments-enabled-description=قم بتعيين هذا إلى true لتمكين التعليقات أثناء إصدار صفحة المحتوى. (Automatic Translation)
 container=الحاوية
 content-name=اسم المحتوى (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=محرر صفحة المحتوى (Automatic Translation)
 content-structure=بنية المحتوى (Automatic Translation)
 content-type=نوع المحتوى
 delete-experience=حذف الخبرة
