--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -11,11 +11,11 @@ browse-all=Explora-ho tot
 change-image=Canviar imatge (Automatic Translation)
 changes-saved-at-x=Canvis desats a {0}.
 changes-to-experiences-are-applied-immediately=Els canvis fets a les experiències s'apliquen immediatament.
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Comentaris habilitats (Automatic Translation)
+comments-enabled-description=Establiu-ho a True per habilitar els comentaris durant l'edició de la pàgina de contingut. (Automatic Translation)
 container=Contenidor
 content-name=Nom de contingut (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Editor de pàgines de contingut (Automatic Translation)
 content-structure=Estructura del contingut (Automatic Translation)
 content-type=Tipus de contingut
 delete-experience=Suprimeix l'experiència
