--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -11,11 +11,11 @@ browse-all=Αναζήτηση όλων (Automatic Translation)
 change-image=Αλλαγή εικόνας (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Οι αλλαγές στις εμπειρίες εφαρμόζονται αμέσως. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Ενεργοποιημένα σχόλια (Automatic Translation)
+comments-enabled-description=Ορίστε την τιμή TRUE για να ενεργοποιήσετε τα σχόλια κατά την έκδοση σελίδας περιεχομένου. (Automatic Translation)
 container=Κοντέινερ (Automatic Translation)
 content-name=Όνομα περιεχομένου (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Πρόγραμμα επεξεργασίας σελίδας περιεχομένου (Automatic Translation)
 content-structure=Δομή περιεχομένου (Automatic Translation)
 content-type=Τύπος περιεχομένου (Automatic Translation)
 delete-experience=Διαγραφή εμπειρίας (Automatic Translation)
