--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -11,11 +11,11 @@ browse-all=Sirvi kõiki (Automatic Translation)
 change-image=Muuda pilti (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Kogemuste muudatusi rakendatakse kohe. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Kommentaarid on lubatud (Automatic Translation)
+comments-enabled-description=Seadke see tõene, et lubada kommentaare sisu leheväljaande ajal. (Automatic Translation)
 container=Konteiner (Automatic Translation)
 content-name=Sisu nimi (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Sisulehekülje redaktor (Automatic Translation)
 content-structure=Sisu struktuur (Automatic Translation)
 content-type=Sisu tüüp (Automatic Translation)
 delete-experience=Kustuta kogemus (Automatic Translation)
