--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -11,11 +11,11 @@ browse-all=مرور همه (Automatic Translation)
 change-image=تغییر تصویر (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=تغییرات در تجربه ها بلافاصله اعمال می شود. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=نظرات فعال است (Automatic Translation)
+comments-enabled-description=تنظیم این به true برای فعال کردن نظرات در طول صفحه محتوا نسخه. (Automatic Translation)
 container=کانتینر
 content-name=نام محتوا (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=ویرایشگر صفحه محتوا (Automatic Translation)
 content-structure=ساختار محتوا (Automatic Translation)
 content-type=نوع محتوا (Automatic Translation)
 delete-experience=حذف تجربه (Automatic Translation)
