--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
@@ -11,11 +11,11 @@ browse-all=सभी ब्राउज़ करें (Automatic Translation)
 change-image=छवि बदलें (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=अनुभवों में परिवर्तन तुरंत लागू किए जाते हैं. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=टिप्पणियाँ सक्षम (Automatic Translation)
+comments-enabled-description=सामग्री पृष्ठ संस्करण के दौरान टिप्पणियों को सक्षम करने के लिए यह सही करने के लिए सेट करें। (Automatic Translation)
 container=कंटेनर (Automatic Translation)
 content-name=सामग्री का नाम (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=सामग्री पृष्ठ संपादक (Automatic Translation)
 content-structure=सामग्री संरचना (Automatic Translation)
 content-type=सामग्री प्रकार (Automatic Translation)
 delete-experience=अनुभव हटाएं (Automatic Translation)
