--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -11,11 +11,11 @@ browse-all=Összes böngészése
 change-image=Képváltás (Automatic Translation)
 changes-saved-at-x=A változtatások elmentve: {0}.
 changes-to-experiences-are-applied-immediately=Az élmény változásai azonnal érvényesülnek.
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Kommentek engedélyezve (Automatic Translation)
+comments-enabled-description=Ha a tartalomlap-kiadás alatt szeretné engedélyezni a megjegyzéseket, állítsa be ezt a True értékre. (Automatic Translation)
 container=Konténer
 content-name=Tartalomnév (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Tartalomlap-szerkesztő (Automatic Translation)
 content-structure=Tartalom-struktúra (Automatic Translation)
 content-type=Tartalom típusa
 delete-experience=Élmény törlése
