--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -11,11 +11,11 @@ browse-all=Peržiūrėti viską (Automatic Translation)
 change-image=Keisti atvaizdą (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Patirties pakeitimai taikomi nedelsiant. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Įgalintos pastabos (Automatic Translation)
+comments-enabled-description=Nustatykite, kad tai būtų teisinga, jei norite įgalinti komentarus turinio puslapio leidime. (Automatic Translation)
 container=Konteineris (Automatic Translation)
 content-name=Turinio pavadinimas (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Turinio puslapio rengyklė (Automatic Translation)
 content-structure=Turinio struktūra (Automatic Translation)
 content-type=Turinio tipas (Automatic Translation)
 delete-experience=Naikinti patirtį (Automatic Translation)
