--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -11,11 +11,11 @@ browse-all=Răsfoire toate (Automatic Translation)
 change-image=Modificare imagine (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Modificările aduse experiențelor sunt aplicate imediat. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Comentarii activate (Automatic Translation)
+comments-enabled-description=Setați acest lucru la True pentru a activa comentariile în timpul ediției paginii de conținut. (Automatic Translation)
 container=Container (Automatic Translation)
 content-name=Nume de conținut (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Editor de pagini de conținut (Automatic Translation)
 content-structure=Structura conținutului (Automatic Translation)
 content-type=Tip de conținut (Automatic Translation)
 delete-experience=Ștergere experiență (Automatic Translation)
