--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -11,11 +11,11 @@ browse-all=Просмотреть все (Automatic Translation)
 change-image=Изменение изображения (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Изменения в опыте применяются немедленно. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Комментарии включены (Automatic Translation)
+comments-enabled-description=Установите это до истины, чтобы включить комментарии во время издания страницы содержимого. (Automatic Translation)
 container=Контейнер (Automatic Translation)
 content-name=Название контента (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Редактор страницы содержимого (Automatic Translation)
 content-structure=Структура контента (Automatic Translation)
 content-type=Тип содержимого (Automatic Translation)
 delete-experience=Удалить опыт (Automatic Translation)
