--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -11,11 +11,11 @@ browse-all=Prehľadávať všetky (Automatic Translation)
 change-image=Zmeniť obrázok (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Zmeny v skúsenostiach sa uplatňujú okamžite. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Komentáre povolené (Automatic Translation)
+comments-enabled-description=Nastavte to pravda, aby ste mohli komentáre počas vydania obsahu stránky. (Automatic Translation)
 container=Kontajner (Automatic Translation)
 content-name=Názov obsahu (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Editor stránok obsahu (Automatic Translation)
 content-structure=Štruktúra obsahu (Automatic Translation)
 content-type=Typ obsahu (Automatic Translation)
 delete-experience=Odstrániť skúsenosti (Automatic Translation)
