--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -11,11 +11,11 @@ browse-all=Преглед на всички (Automatic Translation)
 change-image=Промяна на изображението (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Промените в преживяванията се прилагат незабавно. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Коментарите са разрешени (Automatic Translation)
+comments-enabled-description=Задайте това вярно, за да разрешите коментарите по време на изданието на страницата със съдържание. (Automatic Translation)
 container=Контейнер (Automatic Translation)
 content-name=Име на съдържание (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Редактор на страници със съдържание (Automatic Translation)
 content-structure=Структура на съдържанието (Automatic Translation)
 content-type=Тип съдържание (Automatic Translation)
 delete-experience=Изтриване на опит (Automatic Translation)
