--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -11,11 +11,11 @@ browse-all=Procházet vše (Automatic Translation)
 change-image=Změnit obrázek (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Změny zkušeností se uplatňují okamžitě. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Komentáře povoleny (Automatic Translation)
+comments-enabled-description=Nastavte tuto hodnotu na true, chcete-li povolit poznámky během edice stránky obsahu. (Automatic Translation)
 container=Kontejner (Automatic Translation)
 content-name=Název obsahu (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Editor stránek obsahu (Automatic Translation)
 content-structure=Struktura obsahu (Automatic Translation)
 content-type=Typ obsahu (Automatic Translation)
 delete-experience=Odstranit zkušenosti (Automatic Translation)
