--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -11,11 +11,11 @@ browse-all=Jelajahi semua (Automatic Translation)
 change-image=Ubah gambar (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Perubahan pengalaman segera diterapkan. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Komentar diaktifkan (Automatic Translation)
+comments-enabled-description=Setel ini ke true untuk mengaktifkan komentar selama edisi halaman konten. (Automatic Translation)
 container=Kontainer (Automatic Translation)
 content-name=Nama konten (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Editor halaman konten (Automatic Translation)
 content-structure=Struktur konten (Automatic Translation)
 content-type=Jenis konten (Automatic Translation)
 delete-experience=Hapus pengalaman (Automatic Translation)
