--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -11,11 +11,11 @@ browse-all=모두 찾아보기 (Automatic Translation)
 change-image=이미지 변경 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=경험에 대한 변경 사항은 즉시 적용됩니다. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=주석 사용 가능 (Automatic Translation)
+comments-enabled-description=콘텐츠 페이지 에디션 중에 주석을 사용하도록 설정합니다. (Automatic Translation)
 container=컨테이너 (Automatic Translation)
 content-name=콘텐츠 이름 (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=콘텐츠 페이지 편집기 (Automatic Translation)
 content-structure=콘텐츠 구조 (Automatic Translation)
 content-type=콘텐츠 형식 (Automatic Translation)
 delete-experience=환경 삭제 (Automatic Translation)
