--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -11,11 +11,11 @@ browse-all=Bla gjennom alle (Automatic Translation)
 change-image=Endre bilde (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Endringer i opplevelser brukes umiddelbart. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Kommentarer aktivert (Automatic Translation)
+comments-enabled-description=Sett denne til sann for å aktivere kommentarer under utgaven av innholdssiden. (Automatic Translation)
 container=Beholder (Automatic Translation)
 content-name=Navn på innhold (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Redigering av innholdssider (Automatic Translation)
 content-structure=Innhold struktur (Automatic Translation)
 content-type=Innholdstype (Automatic Translation)
 delete-experience=Slett opplevelse (Automatic Translation)
