--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -11,11 +11,11 @@ browse-all=Procurar tudo
 change-image=Alterar imagem (Automatic Translation)
 changes-saved-at-x=Alteração salva em {0}.
 changes-to-experiences-are-applied-immediately=Modificações nas experiências são aplicadas imediatamente.
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Comentários ativados (Automatic Translation)
+comments-enabled-description=Defina isso como true para habilitar comentários durante a edição de página de conteúdo. (Automatic Translation)
 container=Contêiner
 content-name=Nome do conteúdo (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Editor de páginas de conteúdo (Automatic Translation)
 content-structure=Estrutura de conteúdo (Automatic Translation)
 content-type=Tipo de conteúdo
 delete-experience=Excluir experiência
