--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -11,11 +11,11 @@ browse-all=Brskanje po vseh (Automatic Translation)
 change-image=Spremeni sliko (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Spremembe izkušenj se uporabljajo takoj. (Automatic Translation)
-comments-enabled=Comments Enabled (Automatic Copy)
-comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
+comments-enabled=Komentarji so omogočeni (Automatic Translation)
+comments-enabled-description=To nastavite na TRUE, da omogočite komentarje med izdajo strani z vsebinami. (Automatic Translation)
 container=Posodo (Automatic Translation)
 content-name=Ime vsebine (Automatic Translation)
-content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
+content-page-editor-configuration-name=Urejevalnik strani z vsebinami (Automatic Translation)
 content-structure=Struktura vsebine (Automatic Translation)
 content-type=Vrste vsebine (Automatic Translation)
 delete-experience=Izbriši izkušnjo (Automatic Translation)
